iptables/iptables
# Generated by iptables-save v1.3.5 on Tue Nov  1 21:54:01 2016
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [44:4476]
:OUTPUT ACCEPT [3575:524947]
:LOG_DROP - [0:0]
:LOG_OUTPUT - [0:0]
:LOG_REJECT - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 10.229.9.0/24 -p tcp -m tcp --dport 21 -j LOG_REJECT 
-A INPUT -s 10.229.100.9 -p tcp -m tcp --dport 21 -j LOG_REJECT 
-A INPUT -s 10.229.100.96 -p tcp -m tcp --dport 21 -j LOG_REJECT 
-A INPUT -s 10.229.96.0/255.255.255.0 -p tcp -m tcp --dport 21 -j LOG_REJECT 
-A INPUT -s 10.229.0.0/255.255.0.0 -p tcp -m tcp --dport 21 -j ACCEPT 
-A INPUT -s 10.229.10.0/24 -p udp -m udp --dport 69 -j LOG_REJECT 
-A INPUT -s 10.229.100.10 -p udp -m udp --dport 69 -j LOG_REJECT
-A INPUT -s 10.229.100.96 -p udp -m udp --dport 69 -j LOG_REJECT 
-A INPUT -s 10.229.96.0/255.255.255.0 -p udp -m udp --dport 69 -j LOG_REJECT 
-A INPUT -s 10.229.0.0/255.255.0.0 -p udp -m udp --dport 69 -j ACCEPT
-A INPUT -j LOG_DROP 



-A FORWARD -s 10.229.7.0/24 -d 10.229.8.2 -p tcp --dport 8080 -j LOG_REJECT
-A FORWARD -s 10.229.100.7 -d 10.229.8.2 -p tcp --dport 8080 -j LOG_REJECT
-A FORWARD -s 10.229.100.97 -d 10.229.8.2 -p tcp --dport 8080 -j LOG_REJECT
-A FORWARD -s 10.229.97.0/24 -d 10.229.8.2 -p tcp --dport 8080 -j LOG_REJECT
# Windows Webserver is not listening on port 80.
-A FORWARD -s 10.229.0.0/16 -d 10.229.8.2 -p tcp --dport 80 -j ACCEPT


-A LOG_DROP -j LOG --log-prefix "INPUT:DROP:" --log-level 7 
-A LOG_DROP -j DROP 
-A LOG_OUTPUT -j LOG --log-prefix "OUTPUT:REJECT:" --log-level 7 
-A LOG_OUTPUT -j REJECT --reject-with icmp-port-unreachable 
-A LOG_REJECT -j LOG --log-prefix "INPUT:REJECT:" --log-level 7 
-A LOG_REJECT -j REJECT --reject-with icmp-port-unreachable


-A OUTPUT -d 10.229.9.0/24 -s 10.229.8.2 -j LOG_REJECT
-A OUTPUT -d 10.229.100.9 -s 10.229.8.2 -j LOG_REJECT
-A OUTPUT -d 10.229.100.96 -s 10.229.8.2 -j LOG_REJECT
-A OUTPUT -d 10.229.96.0/24 -s 10.229.8.2 -j LOG_REJECT

COMMIT
